--- a/deploy/tj.env.template
+++ b/deploy/tj.env.template
@@ -1,6 +1,7 @@
 # TractionJackson Environment Configuration
-# Copy this to /opt/tj.env and fill in values
-# NEVER commit this file with real secrets
+# Location on droplet: /etc/traction-jackson/tj.env
+# NEVER commit this file with real secrets to git
+# VERIFIED: 2025-02-06 from live droplet
 
 # ===================
 # REQUIRED: Security
@@ -18,8 +19,15 @@ CANVA_CLIENT_SECRET=
 # REQUIRED: Public URL
 # ===================
 # Your droplet's public IP or domain (no trailing slash)
-# Example: http://159.65.123.45 or https://tj.yourdomain.com
-PUBLIC_BASE_URL=
+PUBLIC_BASE_URL=https://tractionjackson.com
+
+# ===================
+# REQUIRED: ElevenLabs TTS
+# ===================
+# Get from: elevenlabs.io → Developers → API Keys
+# Key MUST have "Text to Speech: Access" permission enabled
+# Key starts with sk_
+ELEVENLABS_API_KEY=
 
 # ===================
 # Server Ports
@@ -29,9 +37,12 @@ OAUTH_PORT=3333
 CANVA_OAUTH_PORT=3333
 
 # ===================
-# Optional
+# Data Directory
 # ===================
-ELEVENLABS_API_KEY=
+TJ_DATA_DIR=/var/lib/traction-jackson
 
-# Deprecated: Only enable for emergency manual token import
-# ALLOW_MANUAL_TOKEN_IMPORT=true
+# ===================
+# Optional / Debug
+# ===================
+# Only enable for emergency manual token import (normally false)
+ALLOW_MANUAL_TOKEN_IMPORT=true
